fix: comments overflowing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -244,6 +244,7 @@ html[data-theme='dark'] .dark-inverted {
 
 .post-children {
   flex: 1;
+  width: 100%;
 }
 
 /* VideoJS */
